// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input matches snapshot: primary with icon on left 1`] = `
<div
  className="twigs-c-PJLV twigs-c-PJLV-ijBDafv-css"
  data-testid="box"
>
  <div
    className="twigs-c-PJLV twigs-c-jtoFuQ twigs-c-jtoFuQ-gRAykL-size-md twigs-c-jtoFuQ-igKkDnE-css"
    data-testid="box"
  >
    <svg
      fill="none"
      height="12"
      viewBox="0 0 6 10"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1 9L5 5L1 1"
        stroke="white"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="1.5"
      />
    </svg>
  </div>
  <input
    className="twigs-c-fbCaTR twigs-c-fbCaTR-hvIBXR-size-md twigs-c-fbCaTR-ikaYCia-css"
    data-testid="input"
  />
</div>
`;

exports[`Input matches snapshot: secondary with icon on right 1`] = `
<div
  className="twigs-c-PJLV twigs-c-PJLV-ijBDafv-css"
  data-testid="box"
>
  <input
    className="twigs-c-fbCaTR twigs-c-fbCaTR-hvIBXR-size-md twigs-c-fbCaTR-idGgydZ-css"
    data-testid="input"
  />
  <div
    className="twigs-c-PJLV twigs-c-jtoFuQ twigs-c-jtoFuQ-gRAykL-size-md twigs-c-jtoFuQ-ihNJuUr-css"
    data-testid="box"
  >
    <svg
      fill="none"
      height="12"
      viewBox="0 0 6 10"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1 9L5 5L1 1"
        stroke="white"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="1.5"
      />
    </svg>
  </div>
</div>
`;

exports[`Input matches snapshot: text with icon on both sides 1`] = `
<div
  className="twigs-c-PJLV twigs-c-PJLV-ijBDafv-css"
  data-testid="box"
>
  <div
    className="twigs-c-PJLV twigs-c-jtoFuQ twigs-c-jtoFuQ-gRAykL-size-md twigs-c-jtoFuQ-igKkDnE-css"
    data-testid="box"
  >
    <svg
      fill="none"
      height="12"
      viewBox="0 0 6 10"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1 9L5 5L1 1"
        stroke="white"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="1.5"
      />
    </svg>
  </div>
  <input
    className="twigs-c-fbCaTR twigs-c-fbCaTR-hvIBXR-size-md twigs-c-fbCaTR-iehajXC-css"
    data-testid="input"
  />
  <div
    className="twigs-c-PJLV twigs-c-jtoFuQ twigs-c-jtoFuQ-gRAykL-size-md twigs-c-jtoFuQ-ihNJuUr-css"
    data-testid="box"
  >
    <svg
      fill="none"
      height="12"
      viewBox="0 0 6 10"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1 9L5 5L1 1"
        stroke="white"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="1.5"
      />
    </svg>
  </div>
</div>
`;
